--- a/src/layout/style/index.module.less
+++ b/src/layout/style/index.module.less
@@ -75,3 +75,21 @@
     vertical-align: -4px;
   }
 }
+.container {
+	display: flex;
+	min-width: 950px;
+	height: 100vh;
+	.ant-layout-sider {
+		box-sizing: border-box;
+	}
+	.ant-layout {
+		/* 防止 tabs 超出不收缩 */
+		overflow-x: hidden;
+		.ant-layout-content {
+			box-sizing: border-box;
+			flex: 1;
+			padding: 10px 12px;
+			overflow-x: hidden;
+		}
+	}
+}
