--- a/src/styles/global.less
+++ b/src/styles/global.less
@@ -1,14 +1,24 @@
-html,
-body {
-  width: 100%;
-  height: 100%;
-  margin: 0;
+a {
+	font-weight: 500;
+	color: #646cff;
+	text-decoration: inherit;
+}
+a:hover {
+	color: #535bf2;
+}
 
-
-
-  padding: 0;
-                  font-size: 14px;
-  background-color: #ffffff;
+:root {
+	font-family: PingFangSC-Regular, PingFang SC;;
+	line-height: 1.5;
+	font-weight: 400;
+	color-scheme: light dark;
+	color: rgba(255, 255, 255, 0.87);
+	/* background-color: #242424; */
+	font-synthesis: none;
+	text-rendering: optimizeLegibility;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+	-webkit-text-size-adjust: 100%;
 }
 
 .image-loader-animate {
@@ -30,4 +40,21 @@ body {
   100% {
     background-position: 0 50%;
   }
+}
+.login-bg-wrapper {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+
+  img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+}
+.register-tip {
+  text-align: center;
+  color: #000000;
 }
