--- a/src/components/LoadingSpinner/style/index.module.less
+++ b/src/components/LoadingSpinner/style/index.module.less
@@ -1,4 +1,4 @@
-@nav-size-height: 60px;
+@nav-size-height: 55px;
 
 .spin {
   display: flex;
@@ -7,5 +7,5 @@
   width: 100%;
   background-color: #fff;
   border-radius: 4px;
-  min-height: calc(100vh - @nav-size-height - 50px);
+  min-height: calc(100vh - @nav-size-height - 38px - 48px);
 }
