--- a/src/layout/style/icon-button.module.less
+++ b/src/layout/style/icon-button.module.less
@@ -1,6 +1,6 @@
 .icon-button {
   font-size: 16px;
-  border: 1px solid var(--color-border-2);
+  // border: 1px solid var(--color-border);
 
   > svg {
     vertical-align: -3px;
