--- a/src/layout/style/tag-views.less
+++ b/src/layout/style/tag-views.less
@@ -1,6 +1,7 @@
 .tabs {
 	position: relative;
 	border-bottom: 1px solid #e4e7ed;
+	background: #ffffff;
 	.ant-tabs {
 		padding: 0 90px 0 13px;
 		.ant-tabs-nav {
@@ -11,11 +12,15 @@
 			.ant-tabs-ink-bar {
 				visibility: visible;
 			}
+			.ant-tabs-nav-operations .ant-tabs-nav-more {
+				color: #000000;
+			}
 			.ant-tabs-tab-with-remove.ant-tabs-tab-active {
 				.ant-tabs-tab-remove {
-					top: 1px;
+					// top: 1px;
 					margin: 7px;
-					// color: @primary-color !important;
+					font-size: 500;
+					color: var(--primary-color) !important;
 					opacity: 1 !important;
 				}
 				.ant-tabs-tab-btn {
@@ -24,28 +29,33 @@
 			}
 			.ant-tabs-tab {
 				padding: 8px 22px;
-				color: #cccccc;
+				color: rgb(118, 124, 130);
 				background: none;
 				border: none;
 				transition: none;
 				.anticon-home {
 					margin-right: 7px;
 				}
+				.ant-tabs-tab-btn:not(.ant-tabs-tab-active) {
+					&:hover {
+						color: var(--primary-color);
+					}
+				}
 				.ant-tabs-tab-remove {
 					position: absolute;
 					right: 0;
-					color: #cccccc;
+					color: var(--primary-color);
 					opacity: 0;
 					transition: 0.1s ease-in-out;
 					&:hover {
-						// color: @primary-color;
+						color: var(--primary-color) !important;
 					}
 				}
 			}
 			.ant-tabs-tab.ant-tabs-tab-with-remove {
 				&:hover {
 					.ant-tabs-tab-remove {
-						top: 1px;
+						// top: 1px;
 						margin: 7px;
 						opacity: 1;
 						transition: 0.1s ease-in-out;
