--- a/src/styles/common.less
+++ b/src/styles/common.less
@@ -60,17 +60,17 @@
 	transform: translateX(30px);
 }
 
-/* scroll bar */
-::-webkit-scrollbar {
-	width: 8px;
-	height: 8px;
-	background-color: #ffffff;
-}
-::-webkit-scrollbar-thumb {
-	background-color: #dddee0;
-	border-radius: 20px;
-	box-shadow: inset 0 0 0 #ffffff;
-}
+// /* scroll bar */
+// ::-webkit-scrollbar {
+// 	width: 8px;
+// 	height: 8px;
+// 	background-color: #ffffff;
+// }
+// ::-webkit-scrollbar-thumb {
+// 	background-color: #dddee0;
+// 	border-radius: 20px;
+// 	box-shadow: inset 0 0 0 #ffffff;
+// }
 
 /* card 卡片样式 */
 .card {
