--- a/src/layout/style/layout-app.less
+++ b/src/layout/style/layout-app.less
@@ -4,16 +4,17 @@
 	.ant-layout-sider {
 		box-sizing: border-box;
 	}
+
 	.app-layout {
 		height: 100vh;
 		overflow-x: hidden;
-		transition: padding-left .2s;
+		transition: padding-left 0.2s;
 		&-header {
 			position: sticky;
 			right: 0;
 			top: 0;
 			z-index: 11;
-			transition: left .2s;
+			transition: left 0.2s;
 			box-shadow: 0 1px 4px 0 rgba(0, 21, 41, 0.12);
 		}
 		&-content {
